--- a/client/src/style.css
+++ b/client/src/style.css
@@ -19,6 +19,11 @@
   --bg-light: #f5f5f5;
 }
 
+* {
+  margin: 0;
+  padding: 0;
+}
+
 a {
   font-weight: 500;
   color: #646cff;
@@ -30,6 +35,7 @@ a:hover {
 }
 
 body {
+  padding: 0;
   margin: 0;
   place-items: center;
   min-width: 320px;
